app mock whitout functionality

--- a/Trackify/app/src/main/res/layout/routes_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_landing_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.routes.search.SearchFragment">
+    tools:context=".ui.routes.RoutesLandingFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
@@ -13,7 +13,8 @@
         android:layout_margin="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/green_blue_crayola"/>
 
     <TextView
         android:id="@+id/textView9"
