--- a/Trackify/app/src/main/res/layout/playlist_cover_item.xml
+++ b/Trackify/app/src/main/res/layout/playlist_cover_item.xml
@@ -1,35 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:background="#3F51B5">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/green_blue_crayola"
+    android:padding="8dp"
+    android:layout_margin="8dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageCover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:contentDescription="@string/playlist_covers"
-        android:focusable="auto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.222"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/textCoverItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/playlist_x"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageCover"
-        app:layout_constraintVertical_bias="0.333" />
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
