--- a/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
@@ -15,13 +15,7 @@
             android:orientation="horizontal"
             android:paddingHorizontal="24dp"
             android:paddingVertical="16dp">
-            <ImageButton
-                android:id="@+id/returnButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/return_button"
-                android:minHeight="48dp"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -134,27 +128,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/white"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:hint="@string/form_song_title">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_corners"
-                        android:textColor="@color/white"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textInputLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textColorHint="@color/white"
-                    android:hint="@string/form_artist">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_corners"
                         android:textColor="@color/white"/>
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
