--- a/Trackify/app/src/main/res/navigation/playlist_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/playlist_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_landing"
-        android:name="com.apm.trackify.ui.playlist.landing.LandingFragment"
+        android:name="com.apm.trackify.ui.playlist.PlaylistLandingFragment"
         tools:layout="@layout/playlists_landing_fragment">
         <action
             android:id="@+id/action_navigation_landing_to_navigation_details"
