--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/routesFragment"
-        android:name="com.apm.trackify.ui.routes.search.SearchFragment"
-        tools:layout="@layout/routes_search_fragment">
+        android:name="com.apm.trackify.ui.routes.RoutesLandingFragment"
+        tools:layout="@layout/routes_landing_fragment">
         <action
             android:id="@+id/action_routes_search_to_route_share"
             app:destination="@+id/routesShareFragment"
