--- a/Trackify/app/src/main/res/navigation/user_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/user_navigation.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.apm.trackify.ui.user.profile.ProfileFragment"
+        android:name="com.apm.trackify.ui.user.UserLandingFragment"
         android:label="user_profile_fragment"
-        tools:layout="@layout/user_profile_fragment" />
+        tools:layout="@layout/user_landing_fragment" />
 
 </navigation>
