--- a/Trackify/app/src/main/res/drawable/ic_drag_handle.xml
+++ b/Trackify/app/src/main/res/drawable/ic_drag_handle.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="?attr/colorControlNormal"
         android:pathData="M19,9H5c-0.55,0 -1,0.45 -1,1v0c0,0.55 0.45,1 1,1h14c0.55,0 1,-0.45 1,-1v0C20,9.45 19.55,9 19,9zM5,15h14c0.55,0 1,-0.45 1,-1v0c0,-0.55 -0.45,-1 -1,-1H5c-0.55,0 -1,0.45 -1,1v0C4,14.55 4.45,15 5,15z" />
 </vector>
