--- a/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
@@ -5,40 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingHorizontal="24dp"
             android:paddingVertical="16dp">
+
             <ImageButton
-                android:id="@+id/returnButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/return_button"
-                android:minHeight="48dp"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
+                android:id="@+id/back"
+                android:layout_width="@dimen/common_icon_size"
+                android:layout_height="@dimen/common_icon_size"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/back_button"
+                android:src="@drawable/ic_back_arrow" />
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
+
             <Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/save_button"/>
+                android:contentDescription="@string/save_button_description"
+                android:text="@string/save_button" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingHorizontal="24dp">
+
             <EditText
                 android:id="@+id/playlistTitleField"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
@@ -51,8 +58,9 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:textColor="@color/white"
-                android:textColorHint="#BDBDBD"/>
+                android:textColorHint="#BDBDBD" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,44 +68,46 @@
             android:orientation="horizontal"
             android:paddingHorizontal="24dp"
             android:paddingTop="8dp">
+
             <TextView
                 android:id="@+id/playlistDurationText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/form_duration"
                 android:textColor="@color/white"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/playlistDurationField"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:paddingHorizontal="24dp"
                 android:backgroundTint="@color/white"
                 android:hint="@string/form_min_input"
                 android:inputType="number"
+                android:paddingHorizontal="24dp"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textColorHint="#BDBDBD"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/minText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/form_min"
-                android:textColor="@color/white"
-                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="100sp"
                 android:autoSizeMinTextSize="12sp"
-                android:autoSizeMaxTextSize="100sp"/>
+                android:autoSizeTextType="uniform"
+                android:text="@string/form_min"
+                android:textColor="@color/white" />
         </LinearLayout>
+
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:backgroundTint="@color/golden_poppy"
             android:layout_marginTop="8dp"
-            android:background="?android:attr/listDivider"/>
+            android:background="?android:attr/listDivider"
+            android:backgroundTint="@color/golden_poppy" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,6 +115,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingTop="16dp">
+
             <TextView
                 android:id="@+id/addSongsText"
                 android:layout_width="wrap_content"
@@ -118,8 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingHorizontal="24dp"
             android:orientation="horizontal"
+            android:paddingHorizontal="24dp"
             android:paddingVertical="16dp">
 
             <LinearLayout
@@ -131,31 +142,31 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:hint="@string/form_song_title">
+                    android:hint="@string/form_song_title"
+                    android:textColorHint="@color/white">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_corners"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout2"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:textColorHint="@color/white"
-                    android:hint="@string/form_artist">
+                    android:hint="@string/form_artist"
+                    android:textColorHint="@color/white">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_corners"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
@@ -169,15 +180,16 @@
                     android:id="@+id/formSearchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    app:rippleColor="@color/golden_poppy"
                     android:backgroundTint="@color/green_blue_crayola"
+                    android:clickable="true"
                     android:contentDescription="@string/form_search_button"
                     android:focusable="true"
+                    app:rippleColor="@color/golden_poppy"
                     app:srcCompat="?android:attr/actionModeWebSearchDrawable"
                     tools:ignore="RedundantDescriptionCheck" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -189,32 +201,37 @@
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:fillViewport="true">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rvPossibleSongs"
-                            android:layout_width="match_parent"
-                            android:layout_height="171dp"
-                            android:background="@color/black"/>
+                        android:id="@+id/rvPossibleSongs"
+                        android:layout_width="match_parent"
+                        android:layout_height="171dp"
+                        android:background="@color/black" />
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/currentSongsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/form_selected_songs"
                 android:textColor="@color/white"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -226,15 +243,17 @@
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:fillViewport="true">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvSelectedSongs"
                         android:layout_width="match_parent"
                         android:layout_height="171dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
