--- a/Trackify/app/src/main/res/layout/playlists_details_footer_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_details_footer_item.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:colorBackground"
     android:orientation="vertical"
     android:paddingStart="16dp"
     android:paddingTop="12dp"
     android:paddingEnd="16dp"
     android:paddingBottom="8dp">
 
-    <com.apm.trackify.widgets.DottedSeparator
+    <com.apm.trackify.widgets.DottedDivider
         android:layout_width="match_parent"
         android:layout_height="2dp" />
 
@@ -25,7 +24,6 @@
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         app:fontFamily="sans-serif-black"
-        tools:fontFamily="sans-serif-black"
         tools:text="3 Tracks · 9 Minutes" />
 
 </LinearLayout>
