--- a/Trackify/app/src/main/res/layout/swipeable_layout.xml
+++ b/Trackify/app/src/main/res/layout/swipeable_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,26 +9,35 @@
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:colorBackground" />
+        android:background="#bdbdbd"
+        tools:visibility="invisible" />
+
+    <View
+        android:id="@+id/foreground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_red_light"
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <ImageButton
-        android:id="@+id/leftIcon"
+        android:id="@+id/icon"
         android:layout_width="@dimen/common_icon_size"
         android:layout_height="@dimen/common_icon_size"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_horizontal"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:srcCompat="@drawable/ic_delete"
         tools:ignore="ContentDescription" />
 
-    <ImageButton
-        android:id="@+id/rightIcon"
-        android:layout_width="@dimen/common_icon_size"
-        android:layout_height="@dimen/common_icon_size"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:srcCompat="@drawable/ic_playlist_add"
-        tools:ignore="ContentDescription" />
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/rightIcon"-->
+    <!--        android:layout_width="@dimen/common_icon_size"-->
+    <!--        android:layout_height="@dimen/common_icon_size"-->
+    <!--        android:layout_gravity="center_vertical|end"-->
+    <!--        android:layout_marginEnd="16dp"-->
+    <!--        android:background="?attr/selectableItemBackgroundBorderless"-->
+    <!--        app:srcCompat="@drawable/ic_playlist_add"-->
+    <!--        tools:ignore="ContentDescription" />-->
 
-</merge>
+</FrameLayout>
