--- a/Trackify/app/src/main/res/navigation/playlist_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/playlist_navigation.xml
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@+id/navigation_details"
-        android:name="com.apm.trackify.ui.playlist.details.PlaylistFragment"
+        android:name="com.apm.trackify.ui.playlist.details.PlaylistDetailsFragment"
         tools:layout="@layout/playlists_details_fragment">
         <action
             android:id="@+id/back_navigation_landing"
