--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- launcher -->
+    <color name="launcher_background">#262833</color>
+
     <color name="golden_poppy">#F9C307</color>
     <color name="sunglow">#FED33C</color>
     <color name="green_blue_crayola">#2886D7</color>
@@ -8,8 +11,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="launcher_background">#262833</color>
-
+    <!-- placeholders -->
     <color name="placeholder_tint">#262626</color>
     <color name="placeholder_background">@android:color/system_notification_accent_color</color>
 </resources>
