--- a/Trackify/app/src/main/res/layout/playlists_details_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_details_header_item.xml
@@ -13,8 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/placeholder_album"
-        tools:background="@color/placeholder_background"
+        app:srcCompat="@drawable/placeholder_playlist"
         tools:scaleType="center" />
 
     <Button
@@ -39,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spotify" />
 
     <TextView
-        android:id="@+id/user"
+        android:id="@+id/owner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingMultiplier="0.9"
