--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -1,14 +1,19 @@
 <resources>
+    <dimen name="icon_size">48dp</dimen>
     <dimen name="margin_horizontal">16dp</dimen>
-    <dimen name="common_icon_size">48dp</dimen>
 
     <!-- placeholders -->
     <dimen name="placeholder_track_padding">22dp</dimen>
     <dimen name="placeholder_album_padding">90dp</dimen>
 
+    <!-- item playlist -->
+    <dimen name="item_playlist_title">14dp</dimen>
+    <dimen name="item_playlist_subtitle">12dp</dimen>
+    <dimen name="item_playlist_margin">5dp</dimen>
+    <dimen name="item_playlist_width">150dp</dimen>
+
     <!-- item track -->
     <dimen name="item_track_title">13dp</dimen>
     <dimen name="item_track_subtitle">11dp</dimen>
-    <dimen name="item_track_cover_size">48dp</dimen>
     <dimen name="item_track_cover_margin">7dp</dimen>
 </resources>
