Refactored some class and added documentation about dependencies

--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/navigation_details"
-        android:name="com.apm.trackify.ui.playlists.details.PlaylistDetailsFragment"
+        android:name="com.apm.trackify.ui.playlists.navigation.tracks.PlaylistTracksFragment"
         tools:layout="@layout/playlists_details_fragment" />
 
 </navigation>
