--- a/Trackify/app/src/main/res/layout/playlists_details_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_details_fragment.xml
@@ -10,6 +10,6 @@
         android:layout_height="match_parent"
         android:background="?android:colorBackground"
         tools:itemCount="10"
-        tools:listitem="@layout/track_drag_item" />
+        tools:listitem="@layout/playlist_track_drag_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
