--- a/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
@@ -25,7 +25,7 @@
         tools:spanCount="2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/create"
         android:layout_width="246dp"
         android:layout_height="43dp"
         android:layout_marginBottom="8dp"
