--- a/Trackify/app/src/main/res/layout/playlists_navigation_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_navigation_fragment.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/nav_host_fragment_playlist"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/playlists_navigation_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
