--- a/Trackify/app/src/main/res/layout/routes_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_landing_fragment.xml
@@ -11,10 +11,10 @@
         android:layout_width="320dp"
         android:layout_height="265dp"
         android:layout_margin="24dp"
+        android:background="@color/green_blue_crayola"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/green_blue_crayola"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
