--- a/Trackify/app/src/main/res/layout/routes_share_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_share_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,11 +12,11 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="57dp"
+        android:background="@color/green_blue_crayola"
         app:layout_constraintBottom_toBottomOf="@+id/start_coordinates"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/shareButton"
-        android:background="@color/green_blue_crayola"/>
+        app:layout_constraintTop_toTopOf="@+id/shareButton" />
 
     <Button
         android:id="@+id/shareButton"
@@ -27,16 +26,6 @@
         android:layout_marginEnd="16dp"
         android:text="@string/share_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -66,7 +55,6 @@
         android:id="@+id/pin_button"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:contentDescription="@string/back_button"
         app:layout_constraintBottom_toBottomOf="@+id/start_coordinates"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/start_coordinates"
@@ -77,7 +65,6 @@
         android:id="@+id/imgBtnEndRoute"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:contentDescription="@string/back_button"
         app:layout_constraintBottom_toBottomOf="@+id/end_coordinates"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/end_coordinates"
@@ -120,11 +107,11 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="30dp"
+        android:background="@color/black"
         android:choiceMode="singleChoice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playlist_to_share_title"
-        android:background="@color/black"/>
+        app:layout_constraintTop_toBottomOf="@+id/playlist_to_share_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
