--- a/Trackify/app/src/main/res/navigation/playlists_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/playlists_navigation.xml
@@ -19,8 +19,8 @@
 
     <fragment
         android:id="@+id/navigation_create"
-        android:name="com.apm.trackify.ui.playlists.create.PlaylistCreateFragment"
-        tools:layout="@layout/playlists_create_fragment">
+        android:name="com.apm.trackify.ui.playlists.navigation.create.PlaylistCreateFragment"
+        tools:layout="@layout/playlist_create_fragment">
         <action
             android:id="@+id/action_navigation_create_to_navigation_landing"
             app:destination="@id/navigation_landing" />
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@+id/navigation_details"
-        android:name="com.apm.trackify.ui.playlists.details.PlaylistDetailsFragment"
+        android:name="com.apm.trackify.ui.playlists.navigation.tracks.PlaylistTracksFragment"
         tools:layout="@layout/playlists_details_fragment">
         <action
             android:id="@+id/back_navigation_landing"
