--- a/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
@@ -115,35 +115,6 @@
             android:paddingHorizontal="24dp"
             android:orientation="horizontal"
             android:paddingVertical="16dp">
-
-            <LinearLayout
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:paddingEnd="16dp">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textInputLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:hint="@string/form_song_title">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"/>
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/formSearchButton"
                     android:layout_width="wrap_content"
@@ -155,31 +126,7 @@
                     android:focusable="true"
                     app:srcCompat="?android:attr/actionModeWebSearchDrawable"
                     tools:ignore="RedundantDescriptionCheck" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
 
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="20dp"
-                android:fillViewport="true">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rvPossibleSongs"
-                            android:layout_width="match_parent"
-                            android:layout_height="171dp"
-                            android:background="@color/black"/>
-                </LinearLayout>
-
-            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -212,8 +159,10 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvSelectedSongs"
                         android:layout_width="match_parent"
-                        android:layout_height="171dp"
-                        android:background="@color/black"/>
+                        android:layout_height="match_parent"
+                        android:background="?android:colorBackground"
+                        tools:itemCount="5"
+                        tools:listitem="@layout/playlists_details_track_item"/>
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
