Updated bottom navigation view with animations and back button

--- a/Trackify/app/src/main/res/animator/restore.xml
+++ b/Trackify/app/src/main/res/animator/restore.xml
@@ -3,10 +3,8 @@
     android:ordering="together">
     <objectAnimator
         android:propertyName="scaleX"
-        android:valueTo="1"
-        android:valueType="floatType" />
+        android:valueTo="1" />
     <objectAnimator
         android:propertyName="scaleY"
-        android:valueTo="1"
-        android:valueType="floatType" />
+        android:valueTo="1" />
 </set>
