--- a/Trackify/app/src/main/res/layout/swipe_right_layout.xml
+++ b/Trackify/app/src/main/res/layout/swipe_right_layout.xml
@@ -29,6 +29,6 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:visibility="invisible"
         app:srcCompat="@drawable/ic_delete"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
         tools:visibility="visible" />
-
 </FrameLayout>
