--- a/Trackify/app/src/main/res/animator/scale_in.xml
+++ b/Trackify/app/src/main/res/animator/scale_in.xml
@@ -3,10 +3,8 @@
     android:ordering="together">
     <objectAnimator
         android:propertyName="scaleX"
-        android:valueTo="0.97"
-        android:valueType="floatType" />
+        android:valueTo="0.97" />
     <objectAnimator
         android:propertyName="scaleY"
-        android:valueTo="0.97"
-        android:valueType="floatType" />
+        android:valueTo="0.97" />
 </set>
