--- a/Trackify/app/src/main/res/layout/profile_navigation_fragment.xml
+++ b/Trackify/app/src/main/res/layout/profile_navigation_fragment.xml
@@ -5,14 +5,9 @@
     android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/user_navigation_fragment"
+        android:id="@+id/profile_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/user_navigation" />
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/profile_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
