--- a/Trackify/app/src/main/res/layout/user_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_landing_fragment.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.user.UserLandingFragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/userName"
@@ -32,11 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@color/raisin_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userFollowers"
-        android:background="@color/raisin_black"
-        android:theme="@style/ThemeOverlay.Material3.Dark">
+        app:layout_constraintTop_toBottomOf="@+id/userFollowers">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
