--- a/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
@@ -9,10 +9,10 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="180dp"
+        android:background="@color/green_blue_crayola"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/green_blue_crayola"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSharedRouteItems"
