--- a/Trackify/app/src/main/res/menu/bottom_menu.xml
+++ b/Trackify/app/src/main/res/menu/bottom_menu.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/playlist_navigation"
+        android:id="@+id/playlists_navigation"
         android:icon="@drawable/ic_music_note"
-        android:title="@string/title_playlists" />
-
+        android:title="@string/playlists_menu" />
     <item
         android:id="@+id/routes_navigation"
         android:icon="@drawable/ic_compass_outlined"
-        android:title="@string/title_routes" />
-
+        android:title="@string/routes_menu" />
     <item
-        android:id="@+id/user_navigation"
+        android:id="@+id/profile_navigation"
         android:icon="@drawable/ic_people_alt"
-        android:title="@string/title_profile" />
-
+        android:title="@string/profile_menu" />
 </menu>
