--- a/Trackify/app/src/main/res/navigation/profile_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/profile_navigation.xml
@@ -2,13 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/user_navigation"
-    app:startDestination="@id/profileFragment">
+    android:id="@+id/profile_navigation"
+    app:startDestination="@+id/profile_fragment">
 
     <fragment
-        android:id="@+id/profileFragment"
+        android:id="@+id/profile_fragment"
         android:name="com.apm.trackify.ui.user.UserLandingFragment"
-        android:label="user_profile_fragment"
         tools:layout="@layout/user_landing_fragment" />
-
 </navigation>
