--- a/Trackify/app/src/main/res/values/styles.xml
+++ b/Trackify/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
         <item name="cornerSize">10%</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.Trackify">
+        <item name="android:windowBackground">@drawable/ic_logo</item>
+    </style>
+
     <!-- item playlist -->
     <style name="Playlist">
         <item name="android:ellipsize">end</item>
