--- a/Trackify/app/src/main/res/drawable/dotted_line.xml
+++ b/Trackify/app/src/main/res/drawable/dotted_line.xml
@@ -5,5 +5,5 @@
         android:width="1dp"
         android:dashWidth="2dp"
         android:dashGap="2dp"
-        android:fillColor="?attr/colorControlNormal" />
+        android:fillColor="?android:colorControlNormal" />
 </shape>
