--- a/Trackify/app/src/main/res/drawable/placeholder_playlist.xml
+++ b/Trackify/app/src/main/res/drawable/placeholder_playlist.xml
@@ -2,9 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/placeholder_gradient" />
     <item
-        android:bottom="@dimen/placeholder_album_padding"
+        android:bottom="@dimen/placeholder_playlist_padding"
         android:drawable="@drawable/ic_playlist"
-        android:left="@dimen/placeholder_album_padding"
-        android:right="@dimen/placeholder_album_padding"
-        android:top="@dimen/placeholder_album_padding" />
+        android:gravity="center"
+        android:left="@dimen/placeholder_playlist_padding"
+        android:right="@dimen/placeholder_playlist_padding"
+        android:top="@dimen/placeholder_playlist_padding" />
 </layer-list>
