--- a/Trackify/app/src/main/res/layout/playlist_track_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlist_track_header_item.xml
@@ -7,9 +7,10 @@
 
     <ImageView
         android:id="@+id/cover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
+        app:layout_constraintDimensionRatio="1.05"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
