--- a/Trackify/app/src/main/res/layout/user_following_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_following_fragment.xml
@@ -7,10 +7,11 @@
 
     <Button
         android:id="@+id/btnReadUserQr"
+        style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_camera"
         android:text="Button"
+        app:icon="@drawable/ic_camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
