--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -29,11 +29,11 @@
 
     <fragment
         android:id="@+id/route_create_fragment"
-        android:name="com.apm.trackify.ui.routes.navigation.create.RouteCreateFragment"
+        android:name="com.apm.trackify.ui.routes.create.RouteCreateFragment"
         tools:layout="@layout/route_create_fragment" />
 
     <fragment
         android:id="@+id/playlist_tracks_fragment"
-        android:name="com.apm.trackify.ui.playlists.navigation.tracks.PlaylistTracksFragment"
+        android:name="com.apm.trackify.ui.playlists.tracks.PlaylistTracksFragment"
         tools:layout="@layout/playlist_tracks_fragment" />
 </navigation>
