--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -1,20 +1,34 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+    <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- primary brand color -->
         <item name="colorPrimary">@color/golden_poppy</item>
         <item name="colorPrimaryVariant">@color/sunglow</item>
         <item name="colorOnPrimary">@color/black</item>
 
-        <!-- Secondary brand color. -->
+        <!-- secondary brand color -->
         <item name="colorSecondary">@color/green_blue_crayola</item>
         <item name="colorSecondaryVariant">@color/tufts_blue</item>
         <item name="colorOnSecondary">@color/white</item>
 
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!--        <item name="colorSurface">@color/md_theme_light_surface</item>-->
+        <!--        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>-->
 
-        <!-- Customize your theme here. -->
-        <item name="android:textColor">@color/white</item>
+        <!--        <item name="colorError">@color/md_theme_light_error</item>-->
+        <!--        <item name="colorOnError">@color/md_theme_light_onError</item>-->
+
+        <!--        <item name="android:colorBackground">@color/md_theme_light_background</item>-->
+        <!--        <item name="colorOnBackground">@color/md_theme_light_onBackground</item>-->
+    </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/raisin_black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+        <item name="windowSplashScreenAnimationDuration">500</item>
+        <item name="android:windowSplashScreenBrandingImage" tools:ignore="NewApi">
+            @drawable/placeholder_branding
+        </item>
+        <item name="postSplashScreenTheme">@style/Theme.Trackify</item>
     </style>
 </resources>
