--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -12,6 +12,10 @@
         <item name="colorSecondaryVariant">@color/tufts_blue</item>
         <item name="colorOnSecondary">@color/white</item>
 
+        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
+
+        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
+
         <!--        <item name="colorSurface">@color/md_theme_light_surface</item>-->
         <!--        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>-->
 
