--- a/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
@@ -12,9 +12,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_height="?attr/actionBarSize" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
@@ -27,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -37,20 +36,22 @@
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    />
+                    android:layout_weight="1" />
+
                 <Button
                     android:id="@+id/saveButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/save_button"/>
+                    android:text="@string/save_button" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingHorizontal="24dp">
+
                 <EditText
                     android:id="@+id/playlistTitleField"
                     style="@style/Widget.AppCompat.AutoCompleteTextView"
@@ -63,8 +64,9 @@
                     android:inputType="textPersonName"
                     android:minHeight="48dp"
                     android:textColor="@color/white"
-                    android:textColorHint="#BDBDBD"/>
+                    android:textColorHint="#BDBDBD" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,44 +74,46 @@
                 android:orientation="horizontal"
                 android:paddingHorizontal="24dp"
                 android:paddingTop="8dp">
+
                 <TextView
                     android:id="@+id/playlistDurationText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/form_duration"
                     android:textColor="@color/white"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/playlistDurationField"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
-                    android:paddingHorizontal="24dp"
                     android:backgroundTint="@color/white"
                     android:hint="@string/form_min_input"
                     android:inputType="number"
+                    android:paddingHorizontal="24dp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textColorHint="#BDBDBD"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/minText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/form_min"
-                    android:textColor="@color/white"
-                    android:autoSizeTextType="uniform"
+                    android:autoSizeMaxTextSize="100sp"
                     android:autoSizeMinTextSize="12sp"
-                    android:autoSizeMaxTextSize="100sp"/>
+                    android:autoSizeTextType="uniform"
+                    android:text="@string/form_min"
+                    android:textColor="@color/white" />
             </LinearLayout>
+
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:backgroundTint="@color/golden_poppy"
                 android:layout_marginTop="8dp"
-                android:background="?android:attr/listDivider"/>
+                android:background="?android:attr/listDivider"
+                android:backgroundTint="@color/golden_poppy" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,6 +121,7 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingTop="16dp">
+
                 <TextView
                     android:id="@+id/addSongsText"
                     android:layout_width="wrap_content"
@@ -130,35 +135,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingHorizontal="24dp"
                 android:orientation="horizontal"
+                android:paddingHorizontal="24dp"
                 android:paddingVertical="16dp">
+
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/formSearchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    app:rippleColor="@color/golden_poppy"
                     android:backgroundTint="@color/green_blue_crayola"
+                    android:clickable="true"
                     android:contentDescription="@string/form_search_button"
                     android:focusable="true"
+                    app:rippleColor="@color/golden_poppy"
                     app:srcCompat="?android:attr/actionModeWebSearchDrawable"
                     tools:ignore="RedundantDescriptionCheck" />
-
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/currentSongsText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/form_selected_songs"
                     android:textColor="@color/white"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -170,19 +178,20 @@
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
                     android:fillViewport="true">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rvSelectedSongs"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="?android:colorBackground"
                             tools:itemCount="5"
-                            tools:listitem="@layout/playlists_track_drag_item"/>
+                            tools:listitem="@layout/playlists_track_drag_item" />
                     </LinearLayout>
-
                 </androidx.core.widget.NestedScrollView>
             </LinearLayout>
         </LinearLayout>
