--- a/Trackify/app/src/main/res/layout/playlists_tracks_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_tracks_fragment.xml
@@ -12,9 +12,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_height="?attr/actionBarSize" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,5 +22,4 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:itemCount="10"
         tools:listitem="@layout/playlists_track_drag_item" />
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
