--- a/Trackify/app/src/main/res/layout/routes_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_create_fragment.xml
@@ -11,9 +11,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_height="?attr/actionBarSize" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
