--- a/Trackify/app/src/main/res/values/styles.xml
+++ b/Trackify/app/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
         <item name="android:textSize">@dimen/item_track_subtitle</item>
     </style>
 
+    <!-- bottom navigation view -->
     <style name="Widget.App.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
     </style>
@@ -54,6 +55,7 @@
         <item name="colorOnPrimary">@color/golden_poppy</item>
     </style>
 
+    <!-- toolbar -->
     <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>
     </style>
