--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -12,18 +12,20 @@
         <item name="colorSecondaryVariant">@color/tufts_blue</item>
         <item name="colorOnSecondary">@color/white</item>
 
-        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
-
-        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
-
+        <!-- surface brand color -->
         <!--        <item name="colorSurface">@color/md_theme_light_surface</item>-->
         <!--        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>-->
 
+        <!-- error brand color -->
         <!--        <item name="colorError">@color/md_theme_light_error</item>-->
         <!--        <item name="colorOnError">@color/md_theme_light_onError</item>-->
 
+        <!-- background brand color -->
         <!--        <item name="android:colorBackground">@color/md_theme_light_background</item>-->
         <!--        <item name="colorOnBackground">@color/md_theme_light_onBackground</item>-->
+
+        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
+        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
